--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
 streamlit
 yfinance
 pandas
-joblib
+numpy
 scikit-learn
+joblib
+plotly
 matplotlib
+ta
+xgboost
+lightgbm
+optuna
+seaborn
+streamlit-aggrid
+streamlit-option-menu
+python-dotenv
+requests
+black
+flake8
+pytest
