--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
-pip install --upgrade \
-streamlit \
-yfinance \
-pandas \
-numpy \
-scikit-learn \
-joblib \
-plotly \
-matplotlib \
-ta \
-xgboost \
-lightgbm \
-optuna \
-seaborn \
-streamlit-aggrid \
-streamlit-option-menu \
-python-dotenv \
-requests \
-black \
-flake8 \
-pytest \
-python-binance \
+streamlit
+yfinance
+pandas
+numpy
+scikit-learn
+joblib
+plotly
+matplotlib
+ta
+xgboost
+lightgbm
+optuna
+seaborn
+streamlit-aggrid
+streamlit-option-menu
+python-dotenv
+requests
+black
+flake8
+pytest
+python-binance
 toml
